2025-04-18  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Amend special characters.

2025-04-17  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Make proper use of 'ishigh' macro.

2025-04-09  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Replace type 'boolean' with 'bool.

2025-04-09  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Revert bool change for C23.

2025-03-31  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Discard trailing whitespace in macros.

2025-03-12  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Prevent get_line() when parsing module name.
	Report and patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004166.html).

2025-03-12  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Parse and reject verbatim in TeX part.
	Report and patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004169.html).

2025-03-11  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Prevent integer overflow in scan_numeric().
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004165.html).

2025-03-10  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Reject strings as macro names.
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004163.html).

2025-03-10  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Change case for letters only.
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004161.html).

2025-02-01  Karl Berry  <karl@freefriends.org>

	* tex.ch (24.336): comment out this patch for interactive deletion
	of \outer tokens, since it has the undesirable side effect of
	deleting through eof.
	* tests/outerdel.tex,