@@ -59,8 +59,8 @@ const_string CTANGLEHELP[] = {
     "+b          print banner line on terminal",
     "+h          print success message on completion",
     "+p          print progress report messages",
-    "+/-q        shortcut for '-bhp'; also '--quiet' (default)",
-    "+/-v        shortcut for '+bhp'; also '--verbose'",
+    "+/-q        shortcut for '-bhp'; also '--quiet'",
+    "+/-v        shortcut for '+bhp'; also '--verbose' (default)",
     "+c          check temporary output for changes",
     "-dN         set 'kpathsea_debug' to N (0..127)",
     "+k          keep separators in numeric literals in the output",
@@ -82,8 +82,8 @@ const_string CWEAVEHELP[] = {
     "+b          print banner line on terminal",
     "+h          print success message on completion",
     "+p          print progress report messages",
-    "+/-q        shortcut for '-bhp'; also '--quiet' (default)",
-    "+/-v        shortcut for '+bhp'; also '--verbose'",
+    "+/-q        shortcut for '-bhp'; also '--quiet'",
+    "+/-v        shortcut for '+bhp'; also '--verbose' (default)",
     "+c          check temporary output for changes",
     "-dN         set 'kpathsea_debug' to N (0..127)",
     "-e          do not enclose C material in \\PB{...}",
@@ -111,8 +111,8 @@ const_string CTWILLHELP[] = {
     "+b          print banner line on terminal",
     "+h          print success message on completion",
     "+p          print progress report messages",
-    "+/-q        shortcut for '-bhp'; also '--quiet' (default)",
-    "+/-v        shortcut for '+bhp'; also '--verbose'",
+    "+/-q        shortcut for '-bhp'; also '--quiet'",
+    "+/-v        shortcut for '+bhp'; also '--verbose' (default)",
     "+c          check temporary output for changes",
     "-dN         set 'kpathsea_debug' to N (0..127)",
     "-e          do not enclose C material in \\PB{...}",
