@@ -1,6 +1,6 @@
 .\" Automatically generated by Pandoc
 .\"
-.TH "CTWILL" "1" "January 1, 2025." "Web2c @VERSION@" "General Commands Manual"
+.TH "CTWILL" "1" "April 30, 2025." "Web2c @VERSION@" "General Commands Manual"
 .SH NAME
 ctwill, ctwill-proofsort, ctwill-refsort, ctwill-twinx \- translate CWEB to TeX with
 mini-indexes
@@ -139,9 +139,6 @@ Option \f[B]+lX\f[R] is also accompanied by an extended
 \f[B]pdfctwimac.tex\f[R] for production of PDF and HINT output with
 active hyperlinks (\f[B]+lpdf\f[R]).
 .IP \[bu] 2
-\f[B]ctwill\f[R] in TeX\ Live operates silently by default; use the
-\f[B]\-\-verbose\f[R] option to get the original behavior.
-.IP \[bu] 2
 File lookup with the environment variable CWEBINPUTS is extended to
 permit several, colon-separated, paths; see ENVIRONMENT below.
 .IP \[bu] 2
@@ -163,10 +160,10 @@ leave out the \f[B]happy message\f[R] (\f[B]\-h\f[R]).
 \f[B]+p\f[R]: print progress report messages
 .IP \[bu] 2
 \f[B]+q\f[R]/\f[B]\-q\f[R]: shortcut for \f[B]\-bhp\f[R]; also
-\f[B]\-\-quiet\f[R] (default)
+\f[B]\-\-quiet\f[R]
 .IP \[bu] 2
 \f[B]+v\f[R]/\f[B]\-v\f[R]: shortcut for \f[B]+bhp\f[R]; also
-\f[B]\-\-verbose\f[R]
+\f[B]\-\-verbose\f[R] (default)
 .IP \[bu] 2
 \f[B]+c\f[R]: check temporary output for changes
 .IP \[bu] 2
