@@ -1,6 +1,6 @@
 .\" Automatically generated by Pandoc
 .\"
-.TH "CWEB" "1" "March 10, 2024" "Web2c @VERSION@" "General Commands Manual"
+.TH "CWEB" "1" "April 30, 2025." "Web2c @VERSION@" "General Commands Manual"
 .SH NAME
 ctangle, cweave \- translate CWEB to C/C++ and/or TeX
 .SH SYNOPSIS
@@ -57,9 +57,6 @@ Option \f[B]+lX\f[R] is accompanied by several wrapper files for
 \f[B]cwebmac.tex\f[R] with translated captions for German
 (\f[B]+ld\f[R]), French (\f[B]+lf\f[R]), and Italian (\f[B]+li\f[R]).
 .IP \[bu] 2
-CWEB in TeX\ Live operates silently by default (as of 2019); use the
-\f[B]\-\-verbose\f[R] option to get the original behavior.
-.IP \[bu] 2
 File lookup with the environment variable CWEBINPUTS is extended to
 permit several, colon-separated, paths; see ENVIRONMENT below.
 .IP \[bu] 2
@@ -84,10 +81,10 @@ The first batch of options are common to both \f[B]ctangle\f[R] and
 \f[B]+p\f[R]: print progress report messages
 .IP \[bu] 2
 \f[B]+q\f[R]/\f[B]\-q\f[R]: shortcut for \f[B]\-bhp\f[R]; also
-\f[B]\-\-quiet\f[R] (default)
+\f[B]\-\-quiet\f[R]
 .IP \[bu] 2
 \f[B]+v\f[R]/\f[B]\-v\f[R]: shortcut for \f[B]+bhp\f[R]; also
-\f[B]\-\-verbose\f[R]
+\f[B]\-\-verbose\f[R] (default)
 .IP \[bu] 2
 \f[B]+c\f[R]: check temporary output for changes
 .IP \[bu] 2
