@@ -1,3 +1,8 @@
+2025-04-30  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctwill.man,
+	* cweb.man: Restore 'verbose' diagnostics in CWEB.
+
 2025-04-09  Karl Berry  <karl@freefriends.org>
 
 	* latex-dev.man: wording.
